feat: добавить supabase в дефолтный конфиг + примеры кастомизации

--- a/.ai-docs-system/config.env
+++ b/.ai-docs-system/config.env
@@ -10,7 +10,7 @@
 
 # ─── Папки и расширения кода ────────────────────────────────────────────────────
 # Какие папки считать "кодом" (изменения в них триггерят напоминание о доке)
-CODE_DIRS=src,app,apps,packages,services,server,client,api,lib,cmd,internal
+CODE_DIRS=src,app,apps,packages,services,server,client,api,lib,cmd,internal,supabase
 
 # Какие расширения файлов считать кодом
 CODE_EXTS=ts,tsx,js,jsx,mjs,cjs,py,go,rs,java,kt,kts,cs,php,rb,swift,c,cpp,h,hpp,sql,graphql,proto
@@ -38,7 +38,7 @@ MAP_FEATURES=src/,app/,lib/,components/,hooks/,pages/,views/,controllers/,handle
 MAP_ARCHITECTURE=schema,models,entities,types,interfaces,database,migrations,prisma,drizzle
 
 # Инфраструктура, DevOps → docs/infrastructure/
-MAP_INFRASTRUCTURE=deploy,docker,k8s,kubernetes,terraform,ansible,ci,cd,.github/workflows,Dockerfile,docker-compose
+MAP_INFRASTRUCTURE=deploy,docker,k8s,kubernetes,terraform,ansible,ci,cd,.github/workflows,Dockerfile,docker-compose,supabase/functions
 
 # ─── Включённые правила ─────────────────────────────────────────────────────────
 # Файлы из rules/ которые активны (без .md)
@@ -57,3 +57,27 @@ ADAPTERS=cursor
 # ─── Метаданные ─────────────────────────────────────────────────────────────────
 # Владелец по умолчанию для новых документов
 DEFAULT_OWNER=@Pixasso
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# Примеры кастомизации под специфичные проекты
+# ═══════════════════════════════════════════════════════════════════════════════
+#
+# Раскомментируйте и добавьте в соответствующие переменные:
+#
+# ─── Monorepo ────────────────────────────────────────────────────────────────────
+# CODE_DIRS: добавьте nx,turborepo,lerna
+# IGNORE_DIRS: добавьте .turbo,.nx
+#
+# ─── Временные/служебные папки ───────────────────────────────────────────────────
+# IGNORE_DIRS: добавьте tmp,temp,cache,.cache,logs
+# Пример проекта: rls-migration-prep,scripts/temp
+#
+# ─── Дополнительные языки ────────────────────────────────────────────────────────
+# CODE_EXTS: добавьте dart,lua,scala,ex,exs (Elixir),clj,cljs (Clojure)
+#
+# ─── Дополнительные фреймворки ───────────────────────────────────────────────────
+# CODE_DIRS: добавьте functions (для Cloud Functions/Edge Functions)
+# MAP_FEATURES: добавьте routes/ (для файловый роутинг)
+#
+# ─── После изменений ─────────────────────────────────────────────────────────────
+# Запустите: ./install.sh . update
