feat(v2.1): безопасность, масштабируемость, универсальность
Основные улучшения:
- Безопасный парсинг config.env (без source)
- Совместимость с Husky/pre-commit framework (HOOKS_MODE)
- Pending updates очередь (local/shared, .gitignore)
- Проверка устаревших документов (DOC_STALE_DAYS)
- Режим uninstall с восстановлением настроек
- Умный pre-commit с напоминанием о pending updates
- Escape regex в pre-commit для корректных паттернов

Файлы:
- install.sh/ps1: безопасный парсинг, setup_hooks(), uninstall
- githooks/pre-commit: get_config_value(), escape_regex()
- config.env: HOOKS_MODE, PENDING_UPDATES_*, DOC_STALE_*
- rules/shortcuts.md: обработка pending updates и stale docs
- .ai-docs-system/.gitignore: игнорировать state/

Версия: 2.0.0 -> 2.1.0

--- a/.ai-docs-system/config.env
+++ b/.ai-docs-system/config.env
@@ -58,6 +58,30 @@ ADAPTERS=cursor
 # Владелец по умолчанию для новых документов
 DEFAULT_OWNER=@Pixasso
 
+# ─── Режим работы с git hooks ────────────────────────────────────────────────────
+# auto     - автоопределение (managed если hooksPath не задан, иначе integrate)
+# managed  - система управляет .githooks (устанавливает core.hooksPath)
+# integrate - система предлагает интеграцию (не меняет hooksPath)
+# off      - хуки не устанавливаются
+HOOKS_MODE=auto
+
+# ─── Pending Updates (очередь отложенных обновлений) ─────────────────────────────
+# Local очередь (gitignored, межсессионность для одного разработчика)
+PENDING_UPDATES_LOCAL=.ai-docs-system/state/pending-updates.queue
+
+# Shared очередь (versioned, команда видит; пусто = выключено)
+PENDING_UPDATES_SHARED=
+
+# Куда писать: local|shared|both
+PENDING_UPDATES_WRITE=local
+
+# ─── Проверка актуальности документов ────────────────────────────────────────────
+# Через сколько дней документ считается устаревшим
+DOC_STALE_DAYS=30
+
+# Максимум устаревших документов в выводе (остальные "ещё N...")
+DOC_STALE_MAX=5
+
 # ═══════════════════════════════════════════════════════════════════════════════
 # Примеры кастомизации под специфичные проекты
 # ═══════════════════════════════════════════════════════════════════════════════
