fix: v2.3.1 - исправлен heredoc и добавлено правило pending-write
Исправления на основе обратной связи тестирования:

1. Fix: heredoc в generate_cursor_rules()
   - Изменён с <<EOF на <<'EOF' (literal mode)
   - Убраны escape-последовательности \` (вызывали syntax error)
   - Версия теперь хардкодится как 2.3.1 (вместо ${VERSION})

2. New: правило pending-write.md
   - Инструкции для AI когда записывать в pending updates
   - Формат записи и примеры команд
   - Определение doc_hint по маппингу
   - Fallback для проблемных путей (.queue0)
   - Проверки безопасности

3. Update: RULES_ENABLED в config.env
   - Добавлен pending-write в дефолтный список правил

4. Version bump: 2.3.0 → 2.3.1
   - install.sh
   - install.ps1
   - .ai-docs-system/update.sh

Fixes проблемы из feedback:
- Syntax error line 627 (незакрытая кавычка в heredoc)
- Отсутствие инструкций для записи pending updates

--- a/.ai-docs-system/config.env
+++ b/.ai-docs-system/config.env
@@ -42,8 +42,8 @@ MAP_INFRASTRUCTURE=deploy,docker,k8s,kubernetes,terraform,ansible,ci,cd,.github/
 
 # ─── Включённые правила ─────────────────────────────────────────────────────────
 # Файлы из rules/ которые активны (без .md)
-# Доступные: doc-first,update-docs,adr,shortcuts,structure
-RULES_ENABLED=doc-first,update-docs,adr,shortcuts,structure
+# Доступные: doc-first,update-docs,adr,shortcuts,structure,pending-write
+RULES_ENABLED=doc-first,update-docs,adr,shortcuts,structure,pending-write
 
 # ─── Шорткаты ───────────────────────────────────────────────────────────────────
 # Команда для быстрого обновления документации
