fix: явный whitelist для метаданных документов
- Добавлено правило: только Status, Last verified, Owner
- Запрет на Priority, Tags, Version без согласования
- Пересобран instructions.md

--- a/.ai-docs-system/config.env
+++ b/.ai-docs-system/config.env
@@ -42,7 +42,7 @@ MAP_INFRASTRUCTURE=deploy,docker,k8s,kubernetes,terraform,ansible,ci,cd,.github/
 
 # ─── Включённые правила ─────────────────────────────────────────────────────────
 # Файлы из rules/ которые активны (без .md)
-# Доступные: doc-first,update-docs,adr,shortcuts,structure,pending-write
+# Доступные: adr,doc-first,pending-write,shortcuts,structure,update-docs
 RULES_ENABLED=doc-first,update-docs,adr,shortcuts,structure,pending-write
 
 # ─── Шорткаты ───────────────────────────────────────────────────────────────────
@@ -51,7 +51,7 @@ SHORTCUT_UPDATE_DOCS===
 
 # ─── Адаптеры ───────────────────────────────────────────────────────────────────
 # Какие файлы правил генерировать
-# Доступные: cursor,copilot,claude,cline
+# Доступные: adr,doc-first,pending-write,shortcuts,structure,update-docs
 ADAPTERS=cursor
 
 # ─── Метаданные ─────────────────────────────────────────────────────────────────
