fix: v2.3.6 - надёжность конфигов, паттернов и update
## Надёжность

1. config.env: комментарий ADAPTERS показывал правила
   - Разделено: `# Доступные правила:` / `# Доступные адаптеры:`
   - Адаптеры: cursor,copilot,claude,cline

2. install.sh/ps1: замена `# Доступные:` слишком широкая
   - Теперь используются уникальные маркеры
   - `# Доступные правила:` — обновляется из rules/*.md
   - `# Доступные адаптеры:` — фиксированный список

3. pre-commit: любой .md считался документацией
   - DOCS_RE больше НЕ включает `\.md$` везде
   - Только DOC_DIRS/ и корневые DOC_FILES (README.md и т.д.)
   - .ai-docs-system/instructions.md больше не скрывает отсутствие doc-обновлений

4. pre-commit: IGNORE_DIRS не работал для вложенных путей
   - `^${IGNORE_DIRS_RE}/` → `(^|/)${IGNORE_DIRS_RE}/`
   - Теперь apps/web/node_modules/ корректно игнорируется

5. update.sh: set -e без -u/pipefail
   - Добавлено: `set -euo pipefail`
   - Более строгий режим для надёжности

## Безопасность

6. update.sh: поддержка UPDATE_REF для pin версии
   - Читает UPDATE_REF из config.env или ENV
   - Поддержка тегов (v2.3.6) и веток (main)
   - Позволяет pin на конкретную версию

## Поддерживаемость

7. Три копии pre-commit синхронизированы
   - Истина: githooks/pre-commit
   - Копии: .githooks/ и .ai-docs-system/hooks/
   - Добавлен комментарий "⚠️ КОПИЯ!" в начало копий

Version bump: 2.3.5 → 2.3.6

--- a/.ai-docs-system/config.env
+++ b/.ai-docs-system/config.env
@@ -42,7 +42,7 @@ MAP_INFRASTRUCTURE=deploy,docker,k8s,kubernetes,terraform,ansible,ci,cd,.github/
 
 # ─── Включённые правила ─────────────────────────────────────────────────────────
 # Файлы из rules/ которые активны (без .md)
-# Доступные: adr,doc-first,pending-write,shortcuts,structure,update-docs
+# Доступные правила: adr,doc-first,pending-write,shortcuts,structure,update-docs
 RULES_ENABLED=doc-first,update-docs,adr,shortcuts,structure,pending-write
 
 # ─── Шорткаты ───────────────────────────────────────────────────────────────────
@@ -50,8 +50,8 @@ RULES_ENABLED=doc-first,update-docs,adr,shortcuts,structure,pending-write
 SHORTCUT_UPDATE_DOCS===
 
 # ─── Адаптеры ───────────────────────────────────────────────────────────────────
-# Какие файлы правил генерировать
-# Доступные: adr,doc-first,pending-write,shortcuts,structure,update-docs
+# Какие файлы правил генерировать для разных AI-помощников
+# Доступные адаптеры: cursor,copilot,claude,cline
 ADAPTERS=cursor
 
 # ─── Метаданные ─────────────────────────────────────────────────────────────────
