fix: v2.3.7 - git worktree, PS5.1, update refs, monorepo docs
## Критичные исправления (P1)

1. install.sh/ps1: поддержка git worktree/submodule
   - Было: `[[ -d .git ]]` / `Test-Path .git`
   - Стало: `git rev-parse --git-dir`
   - Worktree хранит .git как файл → старая проверка падала
   - Добавлена проверка `command -v git` перед использованием

2. install.ps1: совместимость с PowerShell 5.1
   - Было: `Join-String -Separator ","`
   - Стало: `$var -join ","`
   - Join-String доступен только в PS 7+
   - Windows PowerShell 5.1 теперь работает

3. update.sh: динамическое определение extract_dir
   - Было: `extract_dir="ai-docs-system-${UPDATE_REF}"`
   - Стало: `tar -tzf | head -1 | cut -d/ -f1`
   - GitHub называет архив feature/foo не так, как ожидалось
   - Теперь работает с любыми refs (ветки с `/`, теги)

## Новые возможности (P2)

4. Monorepo: опциональная поддержка вложенных docs
   - Добавлен `DOC_DIRS_ROOTS` в config.env
   - По умолчанию пусто (не меняет поведение)
   - Для monorepo: `DOC_DIRS_ROOTS=packages,apps`
   - Паттерн: `packages/*/docs/`, `apps/*/docs/`
   - Не ломает `src/docs/types.ts` (требует структуру)

## Изменённые файлы

- install.sh: git проверка через rev-parse
- install.ps1: git проверка + `-join` вместо Join-String
- update.sh: устойчивый extract_dir для refs
- githooks/pre-commit: DOC_DIRS_ROOTS поддержка
- config.env: документация DOC_DIRS_ROOTS с примером
- Синхронизированы копии: .githooks/, .ai-docs-system/hooks/

Version bump: 2.3.6 → 2.3.7

--- a/.ai-docs-system/config.env
+++ b/.ai-docs-system/config.env
@@ -22,6 +22,11 @@ DOC_DIRS=docs,doc,documentation
 # Какие расширения считать документацией
 DOC_EXTS=md,mdx,rst,adoc
 
+# Дополнительные корни для docs в monorepo (например: packages,apps)
+# Если задано, то packages/*/docs/ и apps/*/docs/ также будут считаться документацией
+# DOC_DIRS_ROOTS=packages,apps
+DOC_DIRS_ROOTS=
+
 # Отдельные файлы документации в корне
 DOC_FILES=README.md,CHANGELOG.md,CONTRIBUTING.md,ARCHITECTURE.md
 
