fix: v2.3.10 - UPDATE_REF auto-v, документация, оптимизация
## Улучшения UX

1. update.sh: UPDATE_REF автоматически пробует v-префикс для semver
   - `UPDATE_REF=2.3.9` → сначала пробует тег v2.3.9, потом ветку
   - Защита от забытого "v" в версии

## Документация

2. config.env: документирован UPDATE_REF
   - Добавлена секция "Обновления системы"
   - Описаны форматы: тег (v2.3.9), semver (2.3.9), ветка (main)

3. config.env: PENDING_UPDATES_WRITE синхронизирован с кодом
   - Было: local|shared|both
   - Стало: local|shared|both|off

## Оптимизация

4. pre-commit: убраны fork'и в MAP_* циклах
   - Было: `echo "$pattern" | xargs` + `grep -qF`
   - Стало: `read -r pattern <<< "$pattern"` + `[[ == *pattern* ]]`
   - Меньше процессов на каждый pattern

## Изменённые файлы

- update.sh: semver auto-v detection
- config.env: UPDATE_REF docs + PENDING_UPDATES_WRITE off
- githooks/pre-commit: inline trim + bash glob matching

Version bump: 2.3.9 → 2.3.10

--- a/.ai-docs-system/config.env
+++ b/.ai-docs-system/config.env
@@ -77,7 +77,7 @@ PENDING_UPDATES_LOCAL=.ai-docs-system/state/pending-updates.queue
 # Shared очередь (versioned, команда видит; пусто = выключено)
 PENDING_UPDATES_SHARED=
 
-# Куда писать: local|shared|both
+# Куда писать: local|shared|both|off (off/none = отключить запись)
 PENDING_UPDATES_WRITE=local
 
 # ─── Проверка актуальности документов ────────────────────────────────────────────
@@ -86,6 +86,11 @@ DOC_STALE_DAYS=30
 
 # Максимум устаревших документов в выводе (остальные "ещё N...")
 DOC_STALE_MAX=5
+
+# ─── Обновления системы ────────────────────────────────────────────────────────
+# Версия/ветка для update.sh: тег (v2.3.9), semver (2.3.9) или ветка (main)
+# Semver без v автоматически пробует как тег v$REF
+# UPDATE_REF=main
 
 # ═══════════════════════════════════════════════════════════════════════════════
 # Примеры кастомизации под специфичные проекты
